[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Serge Q",email = "sq.charnet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colorama (==0.4.6)"
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"